--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -1,20 +1,26 @@
 ---
 title: "Project proposal"
-author: "Team name"
+author: "Fantastic 4"
 output: github_document
 ---
 
 ```{r load-packages, message = FALSE}
 library(tidyverse)
 library(broom)
-## Add any additional packages you are using here
+df <- read_csv("../data/vdem3.csv")
 ```
 
 ## 1. Introduction
 
-The introduction should introduce your general research question(s) and your data (where it came from, how it was collected, what are the cases, what are the variables, etc.).
+This project deals with economy, democracy, and dictatorship. Specifically, we inquire on the relationship between countries’ economy and their regime. We ask how a country’s economy determines its regime measured in democracy and dictatorship continuum. We further ask specific questions:
 
-Text goes here. Refer to the Markdown Quick Reference: Help -> Markdown Quick Reference. 
+(1) How does the region mediate the relationship? 
+(2) What historically relevant events one notices that affect both the economy and regime?
+(3) Can it be that the regime determines the economy?
+
+To answer these questions, we use regime and economic indicators collected from the Varieties of Democracy (V-Dem) dataset and World Development Indicators (WDI) dataset of the World Bank, respectively. The V-Dem dataset provides us with five indices of democracy: polyarchy (or electoral), egalitarian, deliberative, liberal, and participatory democracy. 
+
+To supplement this, the WDI dataset provides economic indicators using Gross Domestic Product per capita (GDP per capita). Finally, our working dataset includes 181 countries and their three-letter ID spanning from 1960 to 2024, along with historically relevant events, their date, and region. Thus, each observation is a country’s regime and economic data in a given year. 
 
 ## 2. Data
 
