--- a/Figure 1/Figure_1.Rmd
+++ b/Figure 1/Figure_1.Rmd
@@ -16,6 +16,11 @@ library(leafsync)
 library(leaflet)
 library(kableExtra)
 df <- read_csv("../data/vdem3.csv")
+#install.packages(c("ggplot2", "dplyr", "rnaturalearth", "rnaturalearthdata"))
+library(ggplot2)
+library(dplyr)
+library(rnaturalearth)
+library(rnaturalearthdata)
 ```
 
 ```{r renaming-variables}
@@ -101,8 +106,6 @@ ggplot(df_year, aes(x = year)) +
    label = "Third Wave \n Democratization", size = 3.2)
 
 ```
-
-
 
 
 
